{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "AFSFOT_Gameplay",
            "id": "c478d8e2-7d28-4a6f-aec8-663a71ebc144",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "522efb19-a67c-4918-b9b7-9beb1252754d",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7813690b-8e8a-4103-993c-91fd1d96922e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "08441b88-b959-489a-b86b-787cd807ef1d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stick",
                    "type": "Button",
                    "id": "fdc01406-57da-4d10-82c1-38bb0753f802",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "StickOrientation",
                    "type": "Value",
                    "id": "e76c13a9-a9e4-4919-8b9e-07a67d9d8f6f",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "020808ee-84b2-4f8f-b4c0-eb40488ae500",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa8b277c-ca1c-4a72-967c-5c4ada6e127a",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0a4f5b8-f203-4236-b74a-44dab8942265",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36360679-9217-4c4d-8034-6b97ac0d8f1f",
                    "path": "<DualShockGamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d177fc0-7b5e-46df-855b-a11887f7f4f2",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e9d7f43-2ef4-436b-8aee-95c5a9805b46",
                    "path": "<DualShockGamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3292246-cb5c-4cca-a328-ffc176e14e7f",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickOrientation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58451ae6-50f7-42c9-9b4b-b5ab3b76965b",
                    "path": "<DualShockGamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickOrientation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c505ad92-4581-429c-a116-301b7d11053a",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8186ffb4-9b65-4002-a681-fad5a26156e7",
                    "path": "<DualShockGamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AFSFOT_Submit",
            "id": "1734ee5d-bf0f-4f47-9893-dc9307104b9e",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "8b1beb93-f489-46b7-ad57-3e71c8abb060",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "af369bad-b710-437d-8e48-a886c81d738c",
                    "path": "<XInputController>/{Submit}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ebb4fc80-06e6-4076-982e-68161817224d",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}